--- a/src/styles.css
+++ b/src/styles.css
@@ -5,20 +5,23 @@
   }
   
   .card {
+    display: inline-block;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 30px;
     box-shadow: 2px 2px 8px rgba(0,0,0,.3);
-    width: fit-content;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
-    margin-top: 10rem;
+    margin-top: 12rem;
     text-shadow: 1px 1px black;
     background: linear-gradient(25deg, rgb(135, 132, 132), rgb(234, 231, 231))
+    
   }
 
   .card .quote {
     margin-bottom: 10px;
     font-size: 22px;
-    
+  
   }
 
   .card .author {
@@ -30,4 +33,7 @@
 
   .card .button {
     margin-left: 40rem;
+    
   }
+
+ 
