--- a/src/styles.css
+++ b/src/styles.css
@@ -1,39 +1,90 @@
-.App {
-    font-family: sans-serif;
-    text-align: center;
-    
-  }
-  
-  .card {
-    display: inline-block;
-    padding: 20px;
-    border-radius: 30px;
-    box-shadow: 2px 2px 8px rgba(0,0,0,.3);
-    align-items: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "montserrat", sans-serif;
+}
+
+.App{
+  background: linear-gradient(#e66465, #9198e5);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
+
+.weathercard {
+    padding: 3rem;
+    width: 25rem;
+    height: 100vh;
     justify-content: center;
-    margin: 0 auto;
-    margin-top: 12rem;
-    text-shadow: 1px 1px black;
-    background: linear-gradient(25deg, rgb(135, 132, 132), rgb(234, 231, 231))
-    
+    margin: auto;
+    border-radius: 20px;
+    text-align: center;
+    align-items: center;
+    background-image: url(./images/back.jpg);
+    background-repeat: no-repeat, repeat;
+    background-position: center; 
+    background-size: cover;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.9);
   }
 
-  .card .quote {
-    margin-bottom: 10px;
-    font-size: 22px;
-  
-  }
+ img {
+   margin: 0 auto;
+ }
 
-  .card .author {
-    text-align: right;
-    margin-right: 1rem;
-    font-size: 22px;
-    font-style: italic;
-  }
+ .title {
+   
+   color: white;
+   font-size: 32px;
+   text-shadow: 2px 2px 2px rgb(150, 150, 155);
+ }
 
-  .card .button {
-    margin-left: 40rem;
-    
-  }
+ .temp {
+   position: relative;
+   margin-top:4rem;
+   height: 6rem;
+   margin: 30px auto;
+   background-color: rgba(255, 255, 255, 0.1);
+   border-radius: 16px;
+   padding: 5px 5px;
+   color: #fff;
+   font-size: 80px;
+   font-weight: 500;
+   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+   text-align: center;
+   align-items: center;
+   justify-content: center;
+   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+ }
 
- 
+.city {
+  color: white;
+  font-size: 40px;
+}
+
+ .country {
+   color: white;
+   font-size: 20px;
+ }
+
+ button {
+   margin-top: 2rem;
+   background-color: #6c967f;
+   border-radius: 20px;
+   padding: 10px;
+   color: white;
+   border: none;
+ }
+
+ .humidity {
+   color: lightblue;
+   font-weight: 20px;
+ }
+
+ .speed {
+   color: lightblue;
+   font-weight: 20pxS;
+ }
