--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .App{
-  background: linear-gradient(#e66465, #9198e5);
+  background-color: black;
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -17,7 +17,7 @@ body {
 
 .weathercard {
     padding: 3rem;
-    width: 25rem;
+    width: 50%;
     height: 100vh;
     justify-content: center;
     margin: auto;
@@ -45,13 +45,14 @@ body {
  .temp {
    position: relative;
    margin-top:4rem;
-   height: 6rem;
+   height: 15vh;
    margin: 30px auto;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 16px;
-   padding: 5px 5px;
+   
    color: #fff;
-   font-size: 80px;
+
+   font-size:5rem;
    font-weight: 500;
    text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
    text-align: center;
@@ -88,3 +89,16 @@ body {
    color: lightblue;
    font-weight: 20pxS;
  }
+
+ @media (max-width: 800px){
+    .temp{
+      font-size:4.5rem;
+      height: 15vh;
+    }
+ }
+ @media (max-width: 540px){
+  .temp{
+    font-size:3rem;
+    
+  }
+}
